refactor(condo): DOMA-10771 update es.json after rebase

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -482,11 +482,11 @@
   "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_EMAILS": "No puedes especificar correos electrónicos diferentes",
   "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_PHONES": "No puede especificar diferentes teléfonos",
   "api.user.authenticateOrRegisterUserWithToken.INVALID_TOKEN": "Token no válido",
+  "api.user.authenticateOrRegisterUserWithToken.OPERATION_FAILED": "No se pudo completar la operación",
   "api.user.authenticateOrRegisterUserWithToken.REQUIRED_USER_DATA_IS_MISSING": "Por favor, complete los campos obligatorios",
   "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_EMAIL": "Para poder iniciar sesión con su número de teléfono, debe iniciar sesión en su cuenta utilizando un correo electrónico verificado.",
   "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_PHONE": "Para poder iniciar sesión con tu correo electrónico, debes iniciar sesión en tu cuenta utilizando un número de teléfono verificado",
   "api.user.authenticateOrRegisterUserWithToken.UNSUPPORTED_TOKEN": "Token no válido",
-  "api.user.authenticateOrRegisterUserWithToken.OPERATION_FAILED": "No se pudo completar la operación",
   "api.user.authenticateUserWithPhoneAndPassword.WRONG_CREDENTIALS": "Teléfono o contraseña incorrectos",
   "api.user.changePasswordWithToken.TOKEN_NOT_FOUND": "No se ha encontrado un token de cambio de contraseña válido",
   "api.user.changePasswordWithToken.USER_NOT_FOUND": "No se ha podido encontrar un usuario con el número de teléfono especificado",
@@ -1508,6 +1508,7 @@
   "notification.messages.MOBILE_APP_UPDATE_AVAILABLE_MESSAGE_PUSH.push.title": "Es hora de actualizar 😉",
   "notification.messages.NEWS_ITEM_COMMON_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.NEWS_ITEM_EMERGENCY_MESSAGE_TYPE.push.title": "{title}",
+  "notification.messages.PASS_TICKET_CREATED.telegram.openPassTicket": "Abrir pase",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_ACQUIRING_PAYMENT_PROCEED_ERROR_MESSAGE.push.title": "Pago automático no realizado 🚨",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CAN_NOT_REGISTER_MULTI_PAYMENT_ERROR_MESSAGE.push.title": "Pago automático no realizado 🚨",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CARD_TOKEN_NOT_VALID_ERROR_MESSAGE.push.title": "Pago automático no realizado 🚨",
@@ -1780,9 +1781,9 @@
   "pages.condo.error.NotFoundDescription": "La página ha sido eliminada o nunca ha existido",
   "pages.condo.error.NotFoundTitle": "Página no encontrada",
   "pages.condo.error.PageTitle": "Mejorando servicio",
-  "pages.condo.error.TooManyRequestsTitle": "El acceso se restablecerá pronto",
   "pages.condo.error.TooManyRequestsDescription": "Hay demasiadas solicitudes desde tu dirección IP, por lo que hemos restringido el acceso. Se restablecerá automáticamente en {resetTime}. Espera por favor",
   "pages.condo.error.TooManyRequestsErrorCode": "Si el acceso no se restablece, contacta con el soporte técnico e informa del código de error 429.",
+  "pages.condo.error.TooManyRequestsTitle": "El acceso se restablecerá pronto",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "No ha sido posible determinar el tipo de enlace. Quizás el enlace es incorrecto o no se ha copiado completamente.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Enlace de pago desconocido",
   "pages.condo.marketplace.bankAccountErrorMessage": "Error en el número de cuenta corriente",
