fix(condo): DOMA-9987 update submodule and fix translations

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1437,7 +1437,7 @@
   "news.template.category.other": "\uD83C\uDFE0 Other",
   "news.template.category.snow": "❄\uFE0F Snow",
   "news.template.category.telephone": "\uD83D\uDCDE Telephone",
-  "news.template.category.utilities": "\uD83D\uDCA1 All utilities",
+  "news.template.category.utilities": "\uD83D\uDCA1 Electricity, water, elevators",
   "news.template.category.water": "\uD83D\uDCA7 Water",
   "news.template.category.fireProtection": "\uD83D\uDC68\uD83C\uDFFB Противопожарное",
   "news.type.common": "Common",
