--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1437,7 +1437,7 @@
   "news.template.category.other": "\uD83C\uDFE0 Otros",
   "news.template.category.snow": "❄\uFE0F Nieve",
   "news.template.category.telephone": "\uD83D\uDCDE Teléfono",
-  "news.template.category.utilities": "\uD83D\uDCA1 Todos servicios",
+  "news.template.category.utilities": "\uD83D\uDCA1 Electricidad, agua, ascensores",
   "news.template.category.water": "\uD83D\uDCA7 Agua",
   "news.template.category.fireProtection": "\uD83D\uDC68\uD83C\uDFFB protección contra incendios",
   "news.type.common": "Planificado",
