--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1437,7 +1437,7 @@
   "news.template.category.other": "\uD83C\uDFE0 Другое",
   "news.template.category.snow": "❄\uFE0F Снег",
   "news.template.category.telephone": "\uD83D\uDCDE Телефон",
-  "news.template.category.utilities": "\uD83D\uDCA1 Все коммунальные услуги",
+  "news.template.category.utilities": "\uD83D\uDCA1 Электроэнергия, вода, лифты",
   "news.template.category.water": "\uD83D\uDCA7 Вода",
   "news.template.category.fireProtection": "\uD83D\uDC68\uD83C\uDFFB Противопожарное",
   "news.type.common": "Плановый",
