fix(condo): DOMA-9987 update submodule and fix translations

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1438,7 +1438,7 @@
   "news.template.category.other": "🏠 Other",
   "news.template.category.snow": "❄️ Snow",
   "news.template.category.telephone": "📞 Telephone",
-  "news.template.category.utilities": "💡 All utilities",
+  "news.template.category.utilities": "💡 Electricity, water, elevators",
   "news.template.category.water": "💧 Water",
   "news.type.common": "Common",
   "news.type.emergency": "Еmergency",
