chore(condo): add modal window

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -18,6 +18,7 @@
   "Author": "автор",
   "Avatar": "Аватар",
   "Back": "Назад",
+  "AndOthers": "и другие",
   "BillingIntegrationContextConfirmQuestion": "Вы действительно хотите интегрироваться с этим биллингом?",
   "BillingIntegrationContextNoReturns": "Нажимая на кнопку \"{buttonValue}\", вы соглашаетесь на интеграцию с этим билингом. После этого поменять интеграцию вручную будет невозможно",
   "BillingServiceAmount": "Стоимость",
@@ -2372,6 +2373,11 @@
   "pages.condo.property.warning.modal.Title": "Не сохранять дом?",
   "pages.condo.property.warning.modal.emptyUnitName": "Название помещения не может быть пустым",
   "pages.condo.property.warning.modal.unsavedChanges": "У вас есть несохраненные изменения",
+  "pages.condo.property.map.modal.noContacts": "В это помещение жители пока не добавлены в платформе Doma.ai",
+  "pages.condo.property.map.modal.goToContacts": "Перейти к контакту",
+  "pages.condo.property.map.modal.errorLoadingContacts": "Не удалось загрузить жителей",
+  "pages.condo.property.map.modal.totalContacts": "Зарегистрировано жителей",
+  "pages.condo.property.map.modal.title": "Подробности о помещении",
   "pages.condo.propertyMeter.index.EmptyList.header": "Пока ОДПУ нет",
   "pages.condo.residents.PageTitle": "Жители",
   "pages.condo.settings.bankAccountInfo.bic": "БИК",
