--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2355,6 +2355,8 @@
   "pages.condo.property.type.village": "Village",
   "pages.condo.property.unit.Name": "Name",
   "pages.condo.property.warning.modal.AddressValidationErrorMsg": "It doesn't look like a house address. Check if you have specified everything correctly.",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.description": "Previously, the period was selected for all houses. It can be changed in the «Meter reporting period» section after the creation of the house.",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.message": "The reading period is set up automatically — from {notifyStartDay} to {notifyEndDay}",
   "pages.condo.property.warning.modal.HelpMessage": "Unsaved information about this property will be lost if you leave this page. You can save the information or continue to edit  by closing this modal window.",
   "pages.condo.property.warning.modal.SameParkingPlaceNamesErrorMsg": "Parking place names must be unique",
   "pages.condo.property.warning.modal.SamePropertyErrorMsg": "Property with this address has already been added to the organization",
