--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -2355,6 +2355,8 @@
   "pages.condo.property.type.village": "Urbanización de chalets",
   "pages.condo.property.unit.Name": "Nombre",
   "pages.condo.property.warning.modal.AddressValidationErrorMsg": "Esto no parece ser la dirección de la casa. Asegúrese de que ha introducido todo correctamente.",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.description": "Anteriormente, el período fue elegido para todas las casas. Puede cambiarlo en la sección «Período de declaración» después de crear la casa.",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.message": "El período de lectura se configura automáticamente de {notifyStartDay} a {notifyEndDay} fecha",
   "pages.condo.property.warning.modal.HelpMessage": "La información de la comunidad no se guardará si abandona la página. Guarde los cambios o continúe editando la información de la comunidad cerrando este mensaje.",
   "pages.condo.property.warning.modal.SameParkingPlaceNamesErrorMsg": "Los nombres de las plazas de coches deben ser únicos",
   "pages.condo.property.warning.modal.SamePropertyErrorMsg": "Ya se ha añadido una comunidad con esta dirección a la organización",
