--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2355,6 +2355,8 @@
   "pages.condo.property.type.village": "Коттеджный поселок",
   "pages.condo.property.unit.Name": "Название",
   "pages.condo.property.warning.modal.AddressValidationErrorMsg": "Это не похоже на адрес дома. Проверьте, всё ли вы правильно указали.",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.description": "Ранее период был выбран для всех домов. Его можно изменить в разделе «Период подачи показаний ИПУ» после создания дома.",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.message": "Период сдачи показаний настроен автоматически — с {notifyStartDay} по {notifyEndDay} число",
   "pages.condo.property.warning.modal.HelpMessage": "Информация о доме не сохранится, если вы уйдёте со страницы. Сохраните изменения или продолжите редактировать информацию о доме, закрыв это сообщение.",
   "pages.condo.property.warning.modal.SameParkingPlaceNamesErrorMsg": "Названия машиномест должны быть уникальными",
   "pages.condo.property.warning.modal.SamePropertyErrorMsg": "Дом с таким адресом уже был добавлен в организацию",
